--- a/views/about.html
+++ b/views/about.html
@@ -7,9 +7,7 @@
   <h1>About</h1>
   <footer>
     <p>
-      <a href="/">Home</a>
-      <a href="/about">About</a>
-      <a href="/article">Article</a>
+      Just testing express, handlebars. Going to add database next.
     </p>
   </footer>
 </body>
