--- a/views/article.html
+++ b/views/article.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Article</title>
-</head>
-<body>
-  <h1>Article</h1>
-  <footer>
-    <p>
-      <a href="/">Home</a>
-      <a href="/about">About</a>
-      <a href="/article">Article</a>
-    </p>
-  </footer>
-</body>
-</html>
+<h1>{{blog.title}}</h1>
+Published: {{blog.published}}
+
+<p/>
+
+{{blog.body}}
